--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@headlessui/react": "^2.2.9",
+    "@mui/material": "^7.3.4",
+    "@mui/x-charts": "^8.14.1",
     "@reduxjs/toolkit": "^2.2.0",
+    "@tailwindcss/postcss": "^4.1.15",
     "next": "latest",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
